k8s/whispr/prod/istio/virtualservice-mobile.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: whispr-mobile
  namespace: whispr-prod
spec:
  gateways:
  - whispr-gateway
  hosts:
  - whispr.roadmvn.com
  http:
  - route:
    - destination:
        host: mobile-web
        port:
          number: 3020
